Fix user settings menu not being entirely visible. [IQSLDSH-359]

--- a/public/modules/core/css/navbar.scss
+++ b/public/modules/core/css/navbar.scss
@@ -120,7 +120,7 @@
 
 .navbar-nav .open .dropdown-menu {
     &.iqss-navbar-dropdown-menu {
-        left: -20%;
+        right: 3px;
         position: absolute;
         background: #fff;
         margin-top: 5px;
